# DuckDI

./: .gitignore  Makefile  README.md  pyproject.toml
src/duckdi/injections/: injections_container.py
tests/: test_get.py  test_interface.py  test_register.py
