[project]
name = "duckdi"
version = "0.1.0"
description = "🦆 A minimal dependency injection library for Python"
authors = [
    {name = "Phe Pato",email = "pheprogrammer@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "toml (>=0.10.2,<0.11.0)"
]
license = "MIT"

[tool.poetry]
packages = [{include = "duckdi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
